--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -5,4 +5,12 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Soon"
+            android:id="@+id/textView"
+            android:layout_gravity="center"/>
 </LinearLayout>
